FuelStations Page y Solucion GoogleMaps navCtrl

--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -12,6 +12,9 @@
       <button ion-button icon-only (click)="addFuelStationsToMap()">
         <ion-icon name="refresh"></ion-icon>
       </button>
+      <button ion-button icon-only (click)="showVisibleFuelStations()">
+        <ion-icon name="expand"></ion-icon>
+      </button>
       <button ion-button icon-only (click)="presentPopover($event)">
         <ion-icon name="more"></ion-icon>
       </button>
