--- a/src/pages/fuelstations/fuelstations.html
+++ b/src/pages/fuelstations/fuelstations.html
@@ -25,7 +25,7 @@
     <ion-item>
       <span item-left>{{marker.distance}}</span>
       <span item-left>{{marker.price}}€/L</span>
-      <button ion-button icon-left outline item-end (click)="goToDetails(marker)">
+      <button ion-button icon-left outline item-end color="details" (click)="goToDetails(marker)">
         <ion-icon name="information-circle"></ion-icon>
         Detalles
       </button>
