--- a/src/pages/favourites/favourites.html
+++ b/src/pages/favourites/favourites.html
@@ -8,7 +8,11 @@
       Favoritos App v1.0
     </ion-title>
 
-    <ion-buttons end *ngIf="(favouritesServices.favourites).length > 0">
+    <ion-buttons end *ngIf="(favourites).length > 0">
+      <button ion-button icon-left outline item-end (click)="synchronize()">
+        <ion-icon name="sync"></ion-icon>
+        Sincronizar
+      </button>
       <button ion-button icon-only (click)="deleteAll()">
         <ion-icon name="trash"></ion-icon>
       </button>
@@ -18,12 +22,15 @@
 
 
 <ion-content>
-  <ion-item padding text-center *ngIf="(favouritesServices.favourites).length === 0"><p>No tiene ningúna gasolinera en favoritos!</p></ion-item>
-  <ion-card *ngFor="let fuelstation of favouritesServices.favourites">
+  <ion-item padding text-center *ngIf="(favourites).length === 0">
+    <p>No tiene ningúna gasolinera en favoritos!</p>
+  </ion-item>
+  <ion-card *ngFor="let fuelstation of favourites">
     <ion-item>
       <ion-icon name="pin" item-start large color="danger"></ion-icon>
       <h2>{{fuelstation.name}}</h2>
       <p>{{fuelstation.schedule}}</p>
+      <p item-end>{{fuelstation.type}}</p>
     </ion-item>
 
     <ion-item>
